# sdkwork-promotion

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/backend-api/promotion/: sdkwork-promotion-backend-api.openapi.json
apps/: README.md
apps/sdkwork-promotion-common/: README.md
apps/sdkwork-promotion-pc/: AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-promotion-pc/specs/: dependency.composition.json
apps/sdkwork-promotion-pc/src/: main.tsx
apps/sdkwork-promotion-pc/tests/test-utils/: promotion-service-mock.ts
crates/sdkwork-api-promotion-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-promotion-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-promotion-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-promotion-standalone-gateway/: Cargo.toml
crates/sdkwork-api-promotion-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-promotion-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-promotion-repository-sqlx/specs/: component.spec.json
crates/sdkwork-commerce-promotion-repository-sqlx/src/: lib.rs  postgres_exchange.rs  postgres_promotion.rs  promotion_admin.rs  promotion_admin_management.rs  sqlite_exchange.rs  sqlite_promotion.rs
crates/sdkwork-commerce-promotion-service/: Cargo.toml  README.md
crates/sdkwork-commerce-promotion-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-promotion-service/src/: backend_admin.rs  lib.rs
crates/sdkwork-commerce-promotion-service/src/commands/: mod.rs
crates/sdkwork-commerce-promotion-service/src/domain/: mod.rs
crates/sdkwork-commerce-promotion-service/src/ports/: mod.rs
crates/sdkwork-commerce-promotion-service/src/queries/: mod.rs
crates/sdkwork-commerce-promotion-service/src/service/: mod.rs
crates/sdkwork-commerce-promotion-service/tests/: promotion_standard.rs
crates/sdkwork-promotion-api-server/: Cargo.toml
crates/sdkwork-promotion-api-server/src/: lib.rs  main.rs
crates/sdkwork-promotion-database-host/: Cargo.toml
crates/sdkwork-promotion-database-host/src/: lib.rs
crates/sdkwork-promotion-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-promotion-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-promotion-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-promotion-repository-sqlx/: Cargo.toml
crates/sdkwork-promotion-repository-sqlx/src/: lib.rs  postgres_exchange.rs  postgres_promotion.rs  sqlite_exchange.rs  sqlite_promotion.rs  test_sqlite_pool.rs
crates/sdkwork-promotion-repository-sqlx/test_migrations/: 0001_promotion_repository_test.sql
crates/sdkwork-promotion-service/: Cargo.toml  README.md
crates/sdkwork-promotion-service-host/: Cargo.toml
crates/sdkwork-promotion-service-host/specs/: component.spec.json
crates/sdkwork-promotion-service-host/src/: lib.rs
crates/sdkwork-promotion-service/specs/: README.md  component.spec.json
crates/sdkwork-promotion-service/src/commands/: mod.rs
crates/sdkwork-promotion-service/src/domain/: mod.rs
crates/sdkwork-promotion-service/src/ports/: mod.rs
crates/sdkwork-promotion-service/src/queries/: mod.rs
crates/sdkwork-promotion-service/src/service/: mod.rs
crates/sdkwork-promotion-service/tests/: promotion_standard.rs
crates/sdkwork-promotion-standalone-gateway/: Cargo.toml
crates/sdkwork-promotion-standalone-gateway/src/: main.rs
crates/sdkwork-router-promotion-app-api/: Cargo.toml
crates/sdkwork-router-promotion-app-api/src/: lib.rs  web_bootstrap.rs
crates/sdkwork-router-promotion-backend-api/: Cargo.toml
crates/sdkwork-router-promotion-backend-api/src/: lib.rs  web_bootstrap.rs
crates/sdkwork-routes-promotion-app-api/: Cargo.toml
crates/sdkwork-routes-promotion-app-api/specs/: component.spec.json
crates/sdkwork-routes-promotion-app-api/src/: api_response.rs  command_headers.rs  exchange_router.rs  lib.rs  promotion_router.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-routes-promotion-backend-api/: Cargo.toml
crates/sdkwork-routes-promotion-backend-api/specs/: component.spec.json
crates/sdkwork-routes-promotion-backend-api/src/: api_response.rs  backend_acl.rs  http_route_manifest.rs  lib.rs  operations.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-routes-promotion-backend-api/tests/: backend_web_framework.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_promotion_baseline.sql
database/ddl/baseline/sqlite/: 0001_promotion_baseline.sql
database/migrations/postgres/: 0002_marketing_admin.up.sql
database/migrations/sqlite/: 0002_marketing_admin.up.sql
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql
database/seeds/locales/de-DE/: README.md
database/seeds/locales/en-US/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
sdks/sdkwork-promotion-app-sdk/: sdk-manifest.json
sdks/sdkwork-promotion-app-sdk/openapi/: sdkwork-promotion-app-api.sdkgen.json
sdks/sdkwork-promotion-app-sdk/sdkwork-promotion-app-sdk-typescript/: package.json
sdks/sdkwork-promotion-app-sdk/specs/: component.spec.json
sdks/sdkwork-promotion-backend-sdk/: sdk-manifest.json
sdks/sdkwork-promotion-backend-sdk/openapi/: sdkwork-promotion-backend-api.openapi.json  sdkwork-promotion-backend-api.sdkgen.json
sdks/sdkwork-promotion-backend-sdk/sdkwork-promotion-backend-sdk-typescript/: package.json
sdks/sdkwork-promotion-backend-sdk/specs/: component.spec.json
specs/: component.spec.json  iam.module.manifest.json
tests/static/: placeholder.test.mjs
tools/: promotion_app_sdk_generate.mjs  promotion_sdk_generate.mjs
(+6 files in other folders)
