[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-promotion-assembly",
    "crates/sdkwork-api-promotion-assembly",
  "crates/sdkwork-commerce-promotion-service",
  "crates/sdkwork-commerce-promotion-repository-sqlx",
  "crates/sdkwork-routes-promotion-app-api",
  "crates/sdkwork-routes-promotion-backend-api",
  "crates/sdkwork-promotion-database-host",
  "crates/sdkwork-promotion-service-host",
  "crates/sdkwork-api-promotion-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
http = "1"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork_contract_service = { path = "../sdkwork-account/crates/sdkwork-contract-service", package = "sdkwork-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork_commerce_promotion_service = { path = "crates/sdkwork-commerce-promotion-service", package = "sdkwork-commerce-promotion-service" }
sdkwork_commerce_promotion_repository_sqlx = { path = "crates/sdkwork-commerce-promotion-repository-sqlx", package = "sdkwork-commerce-promotion-repository-sqlx" }
sdkwork_routes_promotion_app_api = { path = "crates/sdkwork-routes-promotion-app-api", package = "sdkwork-routes-promotion-app-api" }
sdkwork_routes_promotion_backend_api = { path = "crates/sdkwork-routes-promotion-backend-api", package = "sdkwork-routes-promotion-backend-api" }
sdkwork_promotion_database_host = { path = "crates/sdkwork-promotion-database-host", package = "sdkwork-promotion-database-host" }
sdkwork_promotion_service_host = { path = "crates/sdkwork-promotion-service-host", package = "sdkwork-promotion-service-host" }
sdkwork_api_promotion_assembly = { path = "crates/sdkwork-api-promotion-assembly", package = "sdkwork-api-promotion-assembly" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
