[package]
name = "sdkwork-api-promotion-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-promotion application HTTP plane."

[lib]
name = "sdkwork_api_promotion_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_promotion_service_host.workspace = true
sdkwork-routes-promotion-app-api = { path = "../sdkwork-routes-promotion-app-api" }
sdkwork-routes-promotion-backend-api = { path = "../sdkwork-routes-promotion-backend-api" }
