[package]
name = "sdkwork-api-promotion-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-promotion-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_promotion_assembly.workspace = true
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_promotion_service_host.workspace = true
