[package]
publish.workspace = true
name = "sdkwork-commerce-promotion-service"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDKWork commerce coupon and promotion domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
