[package]
name = "sdkwork-promotion-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-promotion application HTTP plane."

[lib]
name = "sdkwork_promotion_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_promotion_service_host.workspace = true
sdkwork_routes_promotion_app_api = { package = "sdkwork-routes-promotion-app-api", path = "../sdkwork-routes-promotion-app-api" }
sdkwork_routes_promotion_backend_api = { package = "sdkwork-routes-promotion-backend-api", path = "../sdkwork-routes-promotion-backend-api" }
