[package]
name = "sdkwork-promotion-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-promotion application HTTP plane."

[lib]
name = "sdkwork_promotion_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_promotion_service_host.workspace = true
sdkwork-routes-promotion-app-api = { path = "../sdkwork-routes-promotion-app-api" }
sdkwork-routes-promotion-backend-api = { path = "../sdkwork-routes-promotion-backend-api" }
