[package]
name = "sdkwork-promotion-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-promotion-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_promotion_gateway_assembly = { package = "sdkwork-promotion-gateway-assembly", path = "../sdkwork-promotion-gateway-assembly" }
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_promotion_app_api.workspace = true
sdkwork_routes_promotion_backend_api.workspace = true
sdkwork_promotion_service_host.workspace = true
